Fix image distortion in about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,8 +128,8 @@ header {
 /* About Section */
 
 #about-section {
-    height: 750px;
-    padding-top: 20px;
+    height: auto;
+    padding: 20px 0;
 }
 
 #about {
@@ -142,7 +142,7 @@ header {
 
 .about-div {
     display: flex;
-    height: 300px;
+    height: auto;
     width: 66%;
     padding: 0 20px 20px;
 }
